[gd_scene load_steps=15 format=3 uid="uid://e3cvkphnn7a7"]

[ext_resource type="Script" path="res://Scenes/Enemies/saucer.gd" id="1_cd4s3"]
[ext_resource type="Texture2D" uid="uid://cjry72dmet30f" path="res://assets/ships/saucer_2.png" id="1_iwbq2"]
[ext_resource type="PackedScene" uid="uid://dwxvhkwxljqn7" path="res://Scenes/health_bar.tscn" id="2_y88wf"]
[ext_resource type="AudioStream" uid="uid://d2foelm8ks88r" path="res://assets/sounds/misc/sci-fi-door.wav" id="4_pm40c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i1f6m"]
radius = 36.0139

[sub_resource type="Animation" id="Animation_ge3si"]
resource_name = "spin"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_hwn0d"]
resource_name = "shoot"
length = 2.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [true],
"method": &"set_shooting"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [false],
"method": &"set_shooting"
}]
}

[sub_resource type="Animation" id="Animation_okyvj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pv2u8"]
_data = {
"RESET": SubResource("Animation_okyvj"),
"shoot": SubResource("Animation_hwn0d"),
"spin": SubResource("Animation_ge3si")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p5ry2"]
animation = &"shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fystb"]
animation = &"spin"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8nvfy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1hwnt"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_55lne"]
states/shoot/node = SubResource("AnimationNodeAnimation_p5ry2")
states/shoot/position = Vector2(577.5, 91.2)
states/spin/node = SubResource("AnimationNodeAnimation_fystb")
states/spin/position = Vector2(371.5, 99.35)
transitions = ["Start", "spin", SubResource("AnimationNodeStateMachineTransition_8nvfy"), "shoot", "spin", SubResource("AnimationNodeStateMachineTransition_1hwnt")]
graph_offset = Vector2(122.985, -45.105)

[node name="Saucer" type="PathFollow2D"]
scale = Vector2(1.5, 1.5)
rotates = false
script = ExtResource("1_cd4s3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
rotation = 6.11274
texture = ExtResource("1_iwbq2")
offset = Vector2(2.08165e-12, 3)
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_i1f6m")

[node name="Booms" type="Node2D" parent="Area2D"]

[node name="Marker2D" type="Marker2D" parent="Area2D/Booms"]
position = Vector2(0, -27)

[node name="Marker2D2" type="Marker2D" parent="Area2D/Booms"]
position = Vector2(22, -13)

[node name="Marker2D3" type="Marker2D" parent="Area2D/Booms"]
position = Vector2(-21, -13)

[node name="Marker2D4" type="Marker2D" parent="Area2D/Booms"]
position = Vector2(0, 26)

[node name="Marker2D5" type="Marker2D" parent="Area2D/Booms"]
position = Vector2(22, 17)

[node name="Marker2D6" type="Marker2D" parent="Area2D/Booms"]
position = Vector2(-22, 17)

[node name="Marker2D7" type="Marker2D" parent="Area2D/Booms"]

[node name="HealthBar" parent="." instance=ExtResource("2_y88wf")]
offset_left = -30.0
offset_top = -44.0
offset_right = 30.0
offset_bottom = -39.0
start_health = 200

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pv2u8")
}
autoplay = "spin"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pm40c")

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pv2u8")
}
tree_root = SubResource("AnimationNodeStateMachine_55lne")
anim_player = NodePath("../AnimationPlayer")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
